# KINDOC_ENDO-ANATOMICAL_LANDMARK_CLS

./: .gitignore  pyproject.toml
core/: __init__.py  dataset.py  evaluator.py  losses.py  trainer.py  visualizer.py
core/models/: __init__.py  binary_classifier.py
notebooks/: 251125_cecum.ipynb
